@@ -11,6 +11,7 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-7">Version 1.3.7 (????-??-??)</a></h2>
 <ul>
+<li>Probably working Xcode 2.1 support (for converted Xcode 2.0 projects)</li>
 <li>Hide List, Object, and Protocol classes from objc.loadBundle
 to prevent confusion with Python code.  They can still be looked
 up with objc.lookUpClass.</li>
